# qpl

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md
.github/: CODEOWNERS
.github/workflows/: clang-format-check.yml  clang-tidy.yml
doc/: requirements.txt
doc/source/: conf.py
examples/low-level-api/: canned_mode_example.cpp  canned_mode_with_data_example.cpp  canned_mode_with_dictionary_example.cpp  compression_example.cpp  compression_multi_chunk_example.cpp  compression_static_multi_chunk_example.cpp  compression_with_dictionary_example.cpp  crc64_cross_socket_example.cpp  crc64_example.cpp  decompression_output_overflow_example.cpp  examples_utils.hpp  expand_example.cpp  expand_with_force_array_output_mod_example.cpp  extract_example.cpp  huffman_only_example.c  mix_paths_comp_decomp_w_dict_example.cpp  scan_for_elements_in_range_example.cpp  scan_for_specific_value_example.cpp  select_example.cpp  serialization_example.cpp
include/qpl/: qpl.h
include/qpl/c_api/: defs.h  dictionary.h  huffman_table.h  index_table.h  job.h  serialization.h  statistics.h  status.h  triplet.h  utility.h  version.h
sources/c_api/: CMakeLists.txt  job.hpp  job_execution_api.cpp  job_initialization_api.cpp  own_checkers.h  own_defs.h  utils_api.cpp
sources/c_api/compression_operations/: arguments_check.hpp  bit_writer.h  compression_state_t.h  compressor.cpp  compressor.hpp  decompressor.cpp  huffman_table.hpp  own_deflate_job.h
sources/c_api/filter_operations/: analytics_state_t.h  arguments_check.hpp  expand_job.cpp  extract_job.cpp  filter_operations.hpp  scan_job.cpp  select_job.cpp
sources/c_api/legacy_hw_path/: async_hw_api.h  hardware_state.h  own_ml_buffer_api.hpp  own_ml_submit_operation_api.hpp  qpl_hw_check_job.cpp  qpl_hw_compress_job.cpp  qpl_hw_inflate_job.cpp  qpl_hw_submit_job.cpp
sources/c_api/other_operations/: arguments_check.hpp  crc64.hpp
sources/c_api/serialization/: huffman_table_serialization.cpp
sources/core-iaa/include/: core_deflate_api.h  hw_aecs_api.h  hw_completion_record_api.h  hw_configuration_driver.h  hw_definitions.h  hw_descriptors_api.h  hw_devices.h  hw_iaa_flags.h  hw_status.h  libaccel_config.h
sources/core-sw/dispatcher/: dispatcher.hpp  simple_memory_ops.hpp  simple_memory_ops_c_bind.cpp  simple_memory_ops_c_bind.h
sources/core-sw/include/: qplc_aggregates.h  qplc_api.h  qplc_checksum.h  qplc_compression_consts.h  qplc_defines.h  qplc_deflate_utils.h  qplc_expand.h  qplc_extract.h  qplc_huffman_table.h  qplc_memop.h  qplc_pack.h  qplc_scan.h  qplc_select.h  qplc_unpack.h
sources/isal/igzip/: bitbuf2.h  encode_df.h  flatten_ll.h  huff_codes.h  huffman.h  hufftables_c.c  igzip_checksums.h  igzip_level_buf_structs.h  igzip_wrapper.h  repeated_char_result.h  static_inflate.h
sources/isal/include/: crc.h  crc64.h  igzip_lib.h  unaligned.h
sources/middle-layer/: CMakeLists.txt
sources/middle-layer/accelerator/: enqueue.cpp  hw_accelerator_api.h
sources/middle-layer/analytics/: analytics_defs.hpp  descriptor_builder.hpp  expand.hpp  extract.hpp  input_stream.hpp  output_stream.hpp  scan.hpp  select.hpp
sources/middle-layer/common/: allocation_buffer_t.hpp  bit_buffer.hpp  bit_reverse.hpp  buffer.hpp  defs.hpp  limited_buffer.hpp  linear_allocator.hpp
sources/middle-layer/compression/: compression_defs.hpp  utils.hpp
sources/middle-layer/dispatcher/: hw_device.cpp  hw_device.hpp  hw_dispatcher.hpp  hw_queue.cpp  hw_queue.hpp  queue_selector.hpp
sources/middle-layer/other/: crc.hpp  other_defs.hpp
sources/middle-layer/util/: awaiter.cpp  awaiter.hpp  checkers.hpp  checksum.hpp  completion_record.hpp  descriptor_processing.hpp  hw_status_converting.hpp  hw_timing_util.hpp  iaa_features_checks.hpp  multi_descriptor_processing.hpp  topology.hpp  util.hpp
tools/benchmarks/include/: cmd_decl.hpp  data_providers.hpp  huffman_table.hpp  measure.hpp  types.hpp  utility.hpp
tools/benchmarks/src/: main.cpp
tools/ref/: ref_crc64.c  ref_expand.c  ref_expand_rle.c  ref_extract.c  ref_own_copy.c  ref_own_min_max_sum.c  ref_own_scan.c  ref_store.c
tools/ref/include/: own_ref_defs.h  qpl_api_ref.h  ref_bit_rev.h  ref_checksums.h  ref_convert.h  ref_copy.h  ref_count.h  ref_mask.h  ref_min_max_sum.h  ref_prle.h  ref_scan.h  ref_store.h
tools/tests/common/: analytic_fixture.hpp  analytic_mask_fixture.hpp  check_result.hpp  common_defs.hpp  execution_wrapper.hpp  job_helper.hpp  operation_test.hpp  run_operation.hpp  test_cases.hpp  test_name_format.hpp  test_sources.cpp  test_sources.hpp
tools/tests/cross_tests/: base_crc_test_fixture.hpp  base_cross_test_fixture.hpp  main.cpp  (+5 more)
tools/tests/fuzzing/low-level-api/: CMakeLists.txt  deflate_canned_default_dict_fuzz_test.cpp  deflate_canned_default_nodict_fuzz_test.cpp  deflate_canned_dict_fuzz_test.hpp  deflate_canned_high_dict_fuzz_test.cpp  deflate_canned_high_nodict_fuzz_test.cpp  deflate_canned_nodict_fuzz_test.hpp  deflate_dict_fuzz_test.cpp  deflate_dict_fuzz_test.hpp  deflate_dynamic_default_dict_fuzz_test.cpp  deflate_dynamic_default_nodict_fuzz_test.cpp  deflate_dynamic_high_dict_fuzz_test.cpp  deflate_dynamic_high_nodict_fuzz_test.cpp  deflate_fixed_default_dict_fuzz_test.cpp  deflate_fixed_default_nodict_fuzz_test.cpp  deflate_fixed_high_dict_fuzz_test.cpp  deflate_fixed_high_nodict_fuzz_test.cpp  deflate_nodict_fuzz_test.cpp  deflate_nodict_fuzz_test.hpp  deflate_static_default_dict_fuzz_test.cpp  deflate_static_default_nodict_fuzz_test.cpp  deflate_static_dict_fuzz_test.hpp  deflate_static_high_dict_fuzz_test.cpp  deflate_static_high_nodict_fuzz_test.cpp  deflate_static_nodict_fuzz_test.hpp  expand_fuzz_test.cpp  extract_fuzz_test.cpp  filter_op_fuzz_test.hpp  inflate_canned_dict_fuzz_test.cpp  inflate_canned_nodict_fuzz_test.cpp  inflate_dict_fuzz_test.cpp  inflate_nodict_fuzz_test.cpp  ll_expand_be_fuzz_test.cpp  ll_expand_le_fuzz_test.cpp  ll_expand_prle_fuzz_test.cpp  ll_extract_be_fuzz_test.cpp  ll_extract_le_fuzz_test.cpp  ll_extract_prle_fuzz_test.cpp  ll_scan_be_fuzz_test.cpp  ll_scan_le_fuzz_test.cpp  (+6 more)
(+242 files in other folders)
